--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <li><a>Contact</a></li>
           </ul>
         </div>
-        <a class="btn btn-ghost text-xl">Bike Dekho</a>
+        <a class="btn btn-ghost text-3xl font-bold">Bike Dekho</a>
       </div>
       <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
@@ -65,12 +65,54 @@
         </ul>
       </div>
       <div class="">
-        <a class="btn btn-error bg-btn-primary">Login</a>
+        <a class="btn bg-btn-primary text-white">Login</a>
       </div>
     </div>
+
+    <!--slider-Carousel-header -->
+    <div class="carousel w-full">
+      <div id="slide1" class="carousel-item relative w-full">
+        <div class="flex">
+          <!-- text-content -->
+          <div>
+            <h2 class="font-bold text-6xl">Ride-on R15 V4<br>with Smile</h2>
+            <p>Amet minim mollit non deserunt ullamco
+              est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+          </div>
+          <!-- img-content -->
+          <div>
+            <img src="images/slider/bike1.png" class="w-full" />
+          </div>
+
+
+        </div>
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide3" class="btn btn-circle">❮</a>
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <div id="slide2" class="carousel-item relative w-full">
+        <img src="https://img.daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.webp" class="w-full" />
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide1" class="btn btn-circle">❮</a>
+          <a href="#slide3" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+      <div id="slide3" class="carousel-item relative w-full">
+        <img src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp" class="w-full" />
+        <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide2" class="btn btn-circle">❮</a>
+          <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+
+    </div>
+
+
   </header>
   <!-- main_section -->
-  <main>
+  <main class="md:container md:mx-auto">
+
 
   </main>
   <!-- footer_section -->
