add new file and new code

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           colors: {
             clifford: '#da373d',
             'btn-primary': '#E76F51',
+            'bg-primary': 'rgba(230, 110, 80, 0.1)',
           }
         }
       }
@@ -71,13 +72,14 @@
 
     <!--slider-Carousel-header -->
     <div class="carousel w-full">
-      <div id="slide1" class="carousel-item relative w-full">
-        <div class="flex">
+      <div id="slide1" class="carousel-item relative w-full bg-bg-primary p-24 ">
+        <div class="flex  ">
           <!-- text-content -->
-          <div>
-            <h2 class="font-bold text-6xl">Ride-on R15 V4<br>with Smile</h2>
-            <p>Amet minim mollit non deserunt ullamco
-              est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+          <div class="  space-y-7">
+            <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
+            <p>Amet minim mollit non deserunt ullamco<br>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
+              <button class="btn bg-btn-primary text-white ">Purchase</button>
           </div>
           <!-- img-content -->
           <div>
