--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
     </div>
 
     <!--slider-Carousel-header -->
-    <div class="carousel w-full">
-      <div id="slide1" class="carousel-item relative w-full bg-bg-primary p-24 ">
-        <div class="flex  ">
+    <div class="carousel w-full lg:h-[550px] bg-bg-primary">
+      <div id="slide1" class="carousel-item relative w-full p-12  lg:p-24">
+        <div class="flex  flex-col  lg:flex-row lg:gap-2 ">
           <!-- text-content -->
-          <div class="  space-y-7">
+          <div class="space-y-7 ">
             <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco<br>
               est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
               <button class="btn bg-btn-primary text-white ">Purchase</button>
           </div>
           <!-- img-content -->
-          <div>
+          <div class="">
             <img src="images/slider/bike1.png" class="w-full" />
           </div>
 
