--- a/index.html
+++ b/index.html
@@ -85,26 +85,48 @@
           <div class="">
             <img src="images/slider/bike1.png" class="w-full" />
           </div>
-
-
         </div>
         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide3" class="btn btn-circle">❮</a>
           <a href="#slide2" class="btn btn-circle">❯</a>
         </div>
       </div>
-      <div id="slide2" class="carousel-item relative w-full">
-        <img src="https://img.daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.webp" class="w-full" />
+       <div id="slide2" class="carousel-item relative w-full p-12  lg:p-24">
+        <div class="flex  flex-col  lg:flex-row lg:gap-2 ">
+          <!-- text-content -->
+          <div class="space-y-7 ">
+            <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
+            <p>Amet minim mollit non deserunt ullamco<br>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
+              <button class="btn bg-btn-primary text-white ">Purchase</button>
+          </div>
+          <!-- img-content -->
+          <div class="">
+            <img src="images/slider/bike2.png" class="w-full" />
+          </div>
+        </div>
         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
           <a href="#slide1" class="btn btn-circle">❮</a>
           <a href="#slide3" class="btn btn-circle">❯</a>
         </div>
       </div>
-      <div id="slide3" class="carousel-item relative w-full">
-        <img src="https://img.daisyui.com/images/stock/photo-1414694762283-acccc27bca85.webp" class="w-full" />
+       <div id="slide3" class="carousel-item relative w-full p-12  lg:p-24">
+        <div class="flex  flex-col  lg:flex-row lg:gap-2 ">
+          <!-- text-content -->
+          <div class="space-y-7 ">
+            <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
+            <p>Amet minim mollit non deserunt ullamco<br>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
+              <button class="btn bg-btn-primary text-white ">Purchase</button>
+          </div>
+          <!-- img-content -->
+          <div class="">
+            <img src="images/slider/bike3.png" class="w-full" />
+          </div>
+        </div>
         <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-          <a href="#slide2" class="btn btn-circle">❮</a>
-          <a href="#slide1" class="btn btn-circle">❯</a>
+          <a href="#slide2" class="">❮</a>
+          <a href="#slide1" class="">❯</a>
         </div>
       </div>
 
