--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco<br>
               est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
-              <button class="btn bg-btn-primary text-white ">Purchase</button>
+              <button class="btn bg-btn-primary text-white px-1 font-semibold ">Purchase</button>
           </div>
           <!-- img-content -->
           <div class="">
@@ -98,7 +98,7 @@
             <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco<br>
               est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
-              <button class="btn bg-btn-primary text-white ">Purchase</button>
+              <button class="btn bg-btn-primary text-white px-1 font-semibold">Purchase</button>
           </div>
           <!-- img-content -->
           <div class="">
@@ -117,7 +117,7 @@
             <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco<br>
               est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
-              <button class="btn bg-btn-primary text-white ">Purchase</button>
+              <button class="btn bg-btn-primary text-white px-1 font-semibold">Purchase</button>
           </div>
           <!-- img-content -->
           <div class="">
