add all new file

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             clifford: '#da373d',
             'btn-primary': '#E76F51',
             'bg-primary': 'rgba(230, 110, 80, 0.1)',
+            // 'text-primary': '#E76F51',
           }
         }
       }
@@ -78,8 +79,8 @@
           <div class="space-y-7 ">
             <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco<br>
-              est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
-              <button class="btn bg-btn-primary text-white px-1 font-semibold ">Purchase</button>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+            <button class="btn bg-btn-primary text-white px-1 font-semibold ">Purchase</button>
           </div>
           <!-- img-content -->
           <div class="">
@@ -91,14 +92,14 @@
           <a href="#slide2" class="btn btn-circle">❯</a>
         </div>
       </div>
-       <div id="slide2" class="carousel-item relative w-full p-12  lg:p-24">
+      <div id="slide2" class="carousel-item relative w-full p-12  lg:p-24">
         <div class="flex  flex-col  lg:flex-row lg:gap-2 ">
           <!-- text-content -->
           <div class="space-y-7 ">
             <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco<br>
-              est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
-              <button class="btn bg-btn-primary text-white px-1 font-semibold">Purchase</button>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+            <button class="btn bg-btn-primary text-white px-1 font-semibold">Purchase</button>
           </div>
           <!-- img-content -->
           <div class="">
@@ -110,14 +111,14 @@
           <a href="#slide3" class="btn btn-circle">❯</a>
         </div>
       </div>
-       <div id="slide3" class="carousel-item relative w-full p-12  lg:p-24">
+      <div id="slide3" class="carousel-item relative w-full p-12  lg:p-24">
         <div class="flex  flex-col  lg:flex-row lg:gap-2 ">
           <!-- text-content -->
           <div class="space-y-7 ">
             <h2 class="font-bold text-6xl ">Ride-on R15 V4<br>with Smile</h2>
             <p>Amet minim mollit non deserunt ullamco<br>
-              est sit aliqua dolor do amet sint. Velit officia consequat <br>  duis enim velit mollit.</p>
-              <button class="btn bg-btn-primary text-white px-1 font-semibold">Purchase</button>
+              est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+            <button class="btn bg-btn-primary text-white px-1 font-semibold">Purchase</button>
           </div>
           <!-- img-content -->
           <div class="">
@@ -135,8 +136,23 @@
 
   </header>
   <!-- main_section -->
-  <main class="md:container md:mx-auto">
+  <main class="md:container md:mx-auto ">
+    <div class="mt-40  text-center p-12">
+      <h2 class="text-5xl font-semibold">Fetured Bikes In This Year</h2>
+      <p class="text-orange-600 mt-1 underline-offset-[2px]">Best bike collection</p>
+      <div class="flex flex-col  lg:flex-row  justify-center gap-32 mt-10 ">
+        <div>
+          <img src="images/others/feature-bike.png" class=" "  alt="">
+        </div>
+        <div class="">
+               <img src="images/others/feature-bike.png" alt="">
+        </div>
+        <div class="">
+          <img src="images/others/feature-bike.png" alt="">
+        </div>
 
+      </div>
+    </div>
 
   </main>
   <!-- footer_section -->
