--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             clifford: '#da373d',
             'btn-primary': '#E76F51',
             'bg-primary': 'rgba(230, 110, 80, 0.1)',
+            'text-gray-primary': 'rgba(108, 108, 108, 100)',
             // 'text-primary': '#E76F51',
           }
         }
@@ -140,12 +141,12 @@
     <div class="mt-40  text-center p-12">
       <h2 class="text-5xl font-semibold">Fetured Bikes In This Year</h2>
       <p class="text-orange-600 mt-1 underline-offset-[2px]">Best bike collection</p>
-      <div class="flex flex-col  lg:flex-row  justify-center gap-32 mt-10 ">
+      <div class="grid md:grid-cols-2 lg:grid-cols-3  justify-center gap-32 mt-10 ">
         <div>
-          <img src="images/others/feature-bike.png" class=" "  alt="">
+          <img src="images/others/feature-bike.png" class=" " alt="">
         </div>
         <div class="">
-               <img src="images/others/feature-bike.png" alt="">
+          <img src="images/others/feature-bike.png" alt="">
         </div>
         <div class="">
           <img src="images/others/feature-bike.png" alt="">
@@ -153,6 +154,53 @@
 
       </div>
     </div>
+
+    <!-- Bike _ card -->
+    <div class="my-12 ">
+      <h2 class="font-semibold text-5xl text-center mb-12">latest News</h2>
+      <div class="grid grid-cols-1 gap-12  md:grid-cols-2 lg:grid-cols-3 ">
+        <!-- card-1 -->
+        <div class="card bg-base-100  shadow-sm">
+          <figure>
+            <img src="images/others/latest1.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-3xl font-semibold">Ducati XDIAVEL S-73</h2>
+            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions justify-start">
+              <button class="btn bg-btn-primary py-3.5 px-3.5 text-white">Read More</button>
+            </div>
+          </div>
+        </div>
+        <!-- card-2 -->
+        <div class="card bg-base-100 shadow-sm">
+          <figure>
+            <img src="images/others/latest2.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-3xl font-semibold">Motorcycles & Scooters</h2>
+            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions justify-start">
+              <button class="btn border border-orange-400 py-3.5 px-3.5 text-orange-700">Read More</button>
+            </div>
+          </div>
+        </div>
+        <!-- card-3 -->
+        <div class="card bg-base-100  shadow-sm">
+          <figure>
+            <img src="images/others/latest3.png" alt="Shoes" />
+          </figure>
+          <div class="card-body">
+            <h2 class="card-title text-3xl font-semibold">2021 Honda CBR500R</h2>
+            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <div class="card-actions justify-start">
+              <button class="btn border border-orange-400  py-3.5 px-3.5 text-orange-700">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
   </main>
   <!-- footer_section -->
