--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
           </figure>
           <div class="card-body">
             <h2 class="card-title text-3xl font-semibold">Ducati XDIAVEL S-73</h2>
-            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+              fermentum amet faucibus sed id nisi lectus at.</p>
             <div class="card-actions justify-start">
               <button class="btn bg-btn-primary py-3.5 px-3.5 text-white">Read More</button>
             </div>
@@ -179,7 +180,8 @@
           </figure>
           <div class="card-body">
             <h2 class="card-title text-3xl font-semibold">Motorcycles & Scooters</h2>
-            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+              fermentum amet faucibus sed id nisi lectus at.</p>
             <div class="card-actions justify-start">
               <button class="btn border border-orange-400 py-3.5 px-3.5 text-orange-700">Read More</button>
             </div>
@@ -192,7 +194,8 @@
           </figure>
           <div class="card-body">
             <h2 class="card-title text-3xl font-semibold">2021 Honda CBR500R</h2>
-            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+            <p class="text-[16px] text-gray-primary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+              fermentum amet faucibus sed id nisi lectus at.</p>
             <div class="card-actions justify-start">
               <button class="btn border border-orange-400  py-3.5 px-3.5 text-orange-700">Read More</button>
             </div>
@@ -200,7 +203,81 @@
         </div>
       </div>
     </div>
+    <!--client-review-card -->
+    <div class="my-12 ">
+      <h2 class="font-semibold text-5xl text-center mb-12">Happy <span class="text-orange-400">Clients says</span></h2>
+      <!-- cards -->
+      <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 justify-center ">
+        <!-- client-card-1 -->
+        <div class=" border border-neutral-400 rounded-lg p-12 mx-12  ">
+          <div class="w-[149px] rounded-full mx-auto">
+            <img src="images/others/user-1.png" />
+          </div>
+          <div class="space-y-6 items-center text-center">
+            <p class="text-gray-600 text-base">Slate helps you see how
+              many more days you need
+              to work to reach your financial
+              goal for the month and year.</p>
+            <div class="rating">
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="1 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="2 star"
+                checked="checked" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="3 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="4 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="5 star" />
+            </div>
+            <h1 class="font-semibold text-sm text-sky-600 ">Regina Miles</h1>
+            <h1 class="font-semibold text-sm">Banker</h1>
 
+          </div>
+        </div>
+        <!-- client-card-2 -->
+        <div class=" border border-neutral-400 rounded-lg p-12 mx-12 ">
+          <div class="w-[149px] rounded-full mx-auto">
+            <img src="images/others/user-2.png" />
+          </div>
+          <div class="space-y-6 items-center text-center">
+            <p class="text-gray-600 text-base">Slate helps you see how
+              many more days you need
+              to work to reach your financial
+              goal for the month and year.</p>
+            <div class="rating">
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="1 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="2 star"
+                checked="checked" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="3 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="4 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="5 star" />
+            </div>
+            <h1 class="font-semibold text-sm text-sky-600 ">Regina Miles</h1>
+            <h1 class="font-semibold text-sm">Banker</h1>
+
+          </div>
+        </div>
+        <!-- client-card-3 -->
+        <div class=" border border-neutral-400 rounded-lg p-12 mx-12 ">
+          <div class="w-[149px] rounded-full mx-auto">
+            <img src="images/others/user-3.png"/>
+          </div>
+          <div class="space-y-6 items-center text-center">
+            <p class="text-gray-600 text-base">Slate helps you see how
+              many more days you need
+              to work to reach your financial
+              goal for the month and year.</p>
+            <div class="rating">
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="1 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="2 star"
+                checked="checked" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="3 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="4 star" />
+              <input type="radio" name="rating-4" class="mask mask-star-2 bg-orange-400" aria-label="5 star" />
+            </div>
+            <h1 class="font-semibold text-sm text-sky-600 ">Regina Miles</h1>
+            <h1 class="font-semibold text-sm">Banker</h1>
+
+          </div>
+        </div>
+      </div>
 
   </main>
   <!-- footer_section -->
