add this new code

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <!-- client-card-3 -->
         <div class=" border border-neutral-400 rounded-lg p-12 mx-12 ">
           <div class="w-[149px] rounded-full mx-auto">
-            <img src="images/others/user-3.png"/>
+            <img src="images/others/user-3.png" />
           </div>
           <div class="space-y-6 items-center text-center">
             <p class="text-gray-600 text-base">Slate helps you see how
@@ -278,6 +278,39 @@
           </div>
         </div>
       </div>
+
+      <!-- faq-section -->
+      <div class="my-12">
+        <h2 class="font-semibold text-5xl text-center">Frequently Asked <span class="text-orange-400">Questions</span>
+        </h2>
+
+        <div class="hero  my-10 ">
+          <div class="hero-content flex-col lg:flex-row">
+            <img src="images/others/faq.png"
+              class="max-w-sm rounded-lg shadow-2xl" />
+       <div>
+        <div class="collapse collapse-arrow bg-base-100 border border-base-300">
+  <input type="radio" name="my-accordion-2" checked="checked" />
+  <div class="collapse-title font-semibold">How do I create an account?</div>
+  <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
+</div>
+<div class="collapse collapse-arrow bg-base-100 border border-base-300">
+  <input type="radio" name="my-accordion-2" />
+  <div class="collapse-title font-semibold">I forgot my password. What should I do?</div>
+  <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and follow the instructions sent to your email.</div>
+</div>
+<div class="collapse collapse-arrow bg-base-100 border border-base-300">
+  <input type="radio" name="my-accordion-2" />
+  <div class="collapse-title font-semibold">How do I update my profile information?</div>
+  <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.</div>
+</div>
+       </div>
+
+          </div>
+        </div>
+
+      </div>
+
 
   </main>
   <!-- footer_section -->
