--- a/index.html
+++ b/index.html
@@ -280,42 +280,47 @@
       </div>
 
       <!-- faq-section -->
-      <div class="my-12">
-        <h2 class="font-semibold text-5xl text-center">Frequently Asked <span class="text-orange-400">Questions</span>
-        </h2>
+      <!-- <div class="my-12"> -->
+        <!-- <h2 class="font-semibold text-5xl text-center">Frequently Asked <span class="text-orange-400">Questions</span> -->
+        <!-- </h2> -->
 
-        <div class="hero  my-10 ">
-          <div class="hero-content flex-col lg:flex-row">
-            <img src="images/others/faq.png"
-              class="max-w-sm rounded-lg shadow-2xl" />
-       <div>
-        <div class="collapse collapse-arrow bg-base-100 border border-base-300">
-  <input type="radio" name="my-accordion-2" checked="checked" />
-  <div class="collapse-title font-semibold">How do I create an account?</div>
-  <div class="collapse-content text-sm">Click the "Sign Up" button in the top right corner and follow the registration process.</div>
-</div>
-<div class="collapse collapse-arrow bg-base-100 border border-base-300">
-  <input type="radio" name="my-accordion-2" />
-  <div class="collapse-title font-semibold">I forgot my password. What should I do?</div>
-  <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and follow the instructions sent to your email.</div>
-</div>
-<div class="collapse collapse-arrow bg-base-100 border border-base-300">
-  <input type="radio" name="my-accordion-2" />
-  <div class="collapse-title font-semibold">How do I update my profile information?</div>
-  <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.</div>
-</div>
-       </div>
-
-          </div>
-        </div>
-
-      </div>
+ 
 
 
   </main>
   <!-- footer_section -->
-  <footer>
-
+  <footer >
+       <footer class="footer sm:footer-horizontal bg-black text-neutral-content p-10 space-x-">
+  <aside >
+  <div class=" flex gap-4">
+     <p>Download</p> 
+   <p>License</p>
+  </div>
+  
+  <div class="grid grid-cols-3 lg:grid-cols-6 gap-3 ">
+    <a href="">About</a>
+    <a href="">Features</a>
+    <a href="">Pricing</a>
+    <a href="">Careers</a>
+    <a href="">Help</a>
+    <a href="">Privacy Policy</a>
+  </div>
+  
+  
+  </aside>
+  <nav>
+    <h6 class="footer-title">Get the App</h6>
+    <div class="grid grid-flow-row gap-4">
+      <a>
+     <img src="images/others/ios.png" class="w-30" alt="">
+      </a>
+      <a>
+       <img src="images/others/android.png" class="w-30" alt="">
+      </a>
+      
+    </div>
+  </nav>
+</footer>
   </footer>
 
 </body>
